finish init design

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <img
       width="40"
       alt="Muslim"
-      src="assets/logo.png"
+      src="assets/muslim-128.png"
     />
     <span>Muslim Popup</span>
     
