finish - quran service

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,8 +4,8 @@
       alt="Muslim"
       src="assets/muslim-128.png"
     />
-    <span>Muslim Popup</span>
-    
+    <span>Muslim Popup Beta</span>
+
     <div class=tools>
         <fa-icon [icon]="faCog"></fa-icon>
     </div>
