--- a/src/app/quran-box/quran-box.component.html
+++ b/src/app/quran-box/quran-box.component.html
@@ -1,7 +1,7 @@
 <div class="card-container">
-   
 
-    <span> {{surah}} 56:186</span>
+
+    <span class="default"> {{surah}} {{ayahNumberInSurah}}:{{surahNumber}}</span>
     <span class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
       <span>{{ayah}}</span>
 
