--- a/src/app/link-box/link-box.component.html
+++ b/src/app/link-box/link-box.component.html
@@ -1,13 +1,13 @@
 <div class="card-container">
-    <a class="circle-link" title="Quran" href="https://angular.io/guide/animations" target="_blank" rel="noopener">
+    <a class="circle-link" title="Quran" href="#" target="_blank" rel="noopener">
      <img src="assets/quran.svg" alt="Quran" style="max-width: 60%;">
     </a>
 
-    <a class="circle-link" title="Hadith" href="https://cli.angular.io/" target="_blank" rel="noopener">
+    <a class="circle-link" title="Hadith" href="#" target="_blank" rel="noopener">
       <img src="assets/star.svg" alt="Hadith" style="max-width: 60%;">
     </a>
 
-    <a class="circle-link" title="Calender" href="https://www.protractortest.org/" target="_blank" rel="noopener">
+    <a class="circle-link" title="Calender" href="#" target="_blank" rel="noopener">
       <img src="assets/hajj.svg" alt="Calender" style="max-width: 60%;">
-    </a>    
+    </a>
 </div>
