--- a/src/app/quran-box/quran-box.component.html
+++ b/src/app/quran-box/quran-box.component.html
@@ -1,10 +1,9 @@
 <div class="card-container">
 
 
-    <span class="default"> {{surah}} {{ayahNumberInSurah}}:{{surahNumber}}</span>
-    <span class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
+  <span class="default"> {{surah}} {{ayahNumberInSurah}}:{{surahNumber}}</span>
+  <span class="card" target="_blank" rel="noopener" href="#">
       <span>{{ayah}}</span>
+  </span>
 
-      <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>    </span>
-
-  </div>
+</div>
