--- a/src/app/prayer-box/prayer-box.component.html
+++ b/src/app/prayer-box/prayer-box.component.html
@@ -4,8 +4,8 @@
     <path fill="#A7F0BA"
           d="M62.2,-62.5C78.2,-46.2,87.1,-23.1,86,-1.1C84.9,20.9,73.7,41.8,57.7,58.3C41.8,74.9,20.9,87.2,-0.5,87.7C-21.9,88.3,-43.8,77,-59.8,60.4C-75.8,43.8,-85.8,21.9,-85.2,0.6C-84.5,-20.6,-73.2,-41.3,-57.2,-57.5C-41.3,-73.8,-20.6,-85.7,1.2,-87C23.1,-88.2,46.2,-78.8,62.2,-62.5Z"
           transform="translate(100 100)"/>
-    <text x="50%" y="30%" text-anchor="middle" dy=".3em">المغرب</text>
-    <text x="50%" y="50%" text-anchor="middle" dy=".3em" font-size="2em">5:19 PM</text>
-    <text x="50%" y="70%" text-anchor="middle" dy=".3em">-1:40:15</text>
+    <text x="50%" y="30%" text-anchor="middle" dy=".3em">{{prayName}}</text>
+    <text x="50%" y="50%" text-anchor="middle" dy=".3em" font-size="2em">{{hour}}:{{min}} {{mood}}</text>
+    <text x="50%" y="70%" text-anchor="middle" dy=".3em">-{{rHour}}:{{rMin}}:{{rSec}}</text>
   </svg>
 </div>
