--- a/src/app/prayer-box/prayer-box.component.html
+++ b/src/app/prayer-box/prayer-box.component.html
@@ -6,6 +6,7 @@
           transform="translate(100 100)"/>
     <text x="50%" y="30%" text-anchor="middle" dy=".3em">{{prayName}}</text>
     <text x="50%" y="50%" text-anchor="middle" dy=".3em" font-size="2em">{{hour}}:{{min}} {{mood}}</text>
-    <text x="50%" y="70%" text-anchor="middle" dy=".3em">-{{rHour}}:{{rMin}}:{{rSec}}</text>
+    <text x="50%" y="70%" text-anchor="middle" dy=".3em" *ngIf="!prayTimeNow">-{{rHour}}:{{rMin}}:{{rSec}}</text>
+    <text x="50%" y="70%" text-anchor="middle" dy=".3em" *ngIf="prayTimeNow">حان الان موعد الصلاه</text>
   </svg>
 </div>
