related #3 add - report issue mail

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer>
-    Love Muslim Popup ?&nbsp;
-    share
+    Love Muslim Popup ?&nbsp;share
 </footer>
+<small>Beta version <a href="mailto:mohamed.motyim@outlook.com">report issue</a></small>
