update - timer for pray

--- a/src/app/prayer-box/prayer-box.component.css
+++ b/src/app/prayer-box/prayer-box.component.css
@@ -1,3 +1,11 @@
 .prayer p {
     font-size: 11px;
 }
+.prayer .relative{
+  position: relative;
+}
+.prayer .absolute{
+  position: absolute;
+  top: 63%;
+  left: 32%;
+}
