--- a/src/app/prayer-box/prayer-box.component.html
+++ b/src/app/prayer-box/prayer-box.component.html
@@ -1,12 +1,17 @@
 <div class=prayer>
   <p>{{arabicDate}} | {{engDate}}</p>
-  <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-    <path fill="#A7F0BA"
-          d="M62.2,-62.5C78.2,-46.2,87.1,-23.1,86,-1.1C84.9,20.9,73.7,41.8,57.7,58.3C41.8,74.9,20.9,87.2,-0.5,87.7C-21.9,88.3,-43.8,77,-59.8,60.4C-75.8,43.8,-85.8,21.9,-85.2,0.6C-84.5,-20.6,-73.2,-41.3,-57.2,-57.5C-41.3,-73.8,-20.6,-85.7,1.2,-87C23.1,-88.2,46.2,-78.8,62.2,-62.5Z"
-          transform="translate(100 100)"/>
-    <text x="50%" y="30%" text-anchor="middle" dy=".3em">{{prayName}}</text>
-    <text x="50%" y="50%" text-anchor="middle" dy=".3em" font-size="2em">{{hour}}:{{min}} {{mood}}</text>
-    <text x="50%" y="70%" text-anchor="middle" dy=".3em" *ngIf="!prayTimeNow">-{{rHour}}:{{rMin}}:{{rSec}}</text>
-    <text x="50%" y="70%" text-anchor="middle" dy=".3em" *ngIf="prayTimeNow">حان الان موعد الصلاه</text>
-  </svg>
+  <div class="relative">
+    <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+      <path fill="#A7F0BA"
+            d="M62.2,-62.5C78.2,-46.2,87.1,-23.1,86,-1.1C84.9,20.9,73.7,41.8,57.7,58.3C41.8,74.9,20.9,87.2,-0.5,87.7C-21.9,88.3,-43.8,77,-59.8,60.4C-75.8,43.8,-85.8,21.9,-85.2,0.6C-84.5,-20.6,-73.2,-41.3,-57.2,-57.5C-41.3,-73.8,-20.6,-85.7,1.2,-87C23.1,-88.2,46.2,-78.8,62.2,-62.5Z"
+            transform="translate(100 100)"/>
+      <text x="50%" y="30%" text-anchor="middle" dy=".3em">{{prayName}}</text>
+      <text x="50%" y="50%" text-anchor="middle" dy=".3em" font-size="2em">{{hour}}:{{min}} {{mood}}</text>
+      <text x="50%" y="70%" text-anchor="middle" dy=".3em" *ngIf="prayTimeNow">حان الان موعد الصلاه</text>
+    </svg>
+    <div class="absolute">-
+      <countdown *ngIf="!prayTimeNow" #cd [config]="{leftTime: leftTime}" (event)="handleEvent($event)"></countdown>
+    </div>
+  </div>
+
 </div>
