--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,6 +7,6 @@
     <span>Muslim Popup Beta</span>
 
     <div class=tools>
-        <fa-icon [icon]="faCog"></fa-icon>
+        <fa-icon routerLink="/about" routerLinkActive="active" [icon]="faCog"></fa-icon>
     </div>
   </div>
