--- a/src/app/mainview/mainview.component.html
+++ b/src/app/mainview/mainview.component.html
@@ -4,7 +4,7 @@
 
   <app-quran-box></app-quran-box>
 
-  <app-link-box></app-link-box>
+<!--  <app-link-box></app-link-box>-->
 
   <app-footer></app-footer>
 </div>
